responsive fixes, spacing on item pages

--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,6 @@ header {
 @media (min-width: 576px) {
   .intro {
     position: relative;
-    top: 0;
     display: grid;
     width: min-content;
     margin: 0 auto; /* 0 auto ||  25vh auto 25vh auto */
@@ -314,25 +313,12 @@ header {
     grid-template-columns: min-content max-content;
     padding-top: 3em;
     padding-right: 0;
-    margin-top: 200px;
-    margin-bottom: 150px;
   }
-
   .hero {
     position: absolute;
     top: 0;
-    display: grid;
-    width: min-content;
-    margin: 0 auto; /* 0 auto ||  25vh auto 25vh auto */
-    grid-column-gap: 1em;
-    grid-template-areas:
-      "img title"
-      "img subtitle";
-    grid-template-columns: min-content max-content;
-    padding-top: 3em;
-    padding-right: 0;
-    margin-top: 200px;
-    margin-bottom: 150px;
+    margin-top: 22vh;
+    margin-bottom: 15vh;
   }
 
   .section__subtitle--intro {
@@ -515,7 +501,6 @@ header {
   grid-template-columns: repeat(auto-fill, minmax(300px, 450px));
   grid-template-rows: repeat(auto-fill, minmax(300px, 450px));
   justify-content: center;
-  position: relative;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0;
@@ -530,7 +515,7 @@ header {
 }
 
 .portfolio__img {
-  transition: transform 5000ms, opacity 250ms linear;
+  transition: transform 5000ms, opacity 250ms ease-in-out;
 }
 
 .portfolio__item:focus,
@@ -651,11 +636,13 @@ header {
   box-shadow: var(--bs);
 }
 .portfolio-item-individual__img-lg {
+  border-radius: 10px;
   margin: 2em auto;
 }
 
 .portfolio-item-individual__img {
   transition: transform 5000ms, opacity 250ms linear;
+  margin-top: -60px;
 }
 
 .portfolio-item-individual__img:hover {
@@ -670,18 +657,14 @@ header {
 
 @media (min-width: 576px) {
   .portfolio-item-individual__item {
-    max-width: 300px;
+    width: 300px;
     max-height: 300px;
   }
 }
 
 @media (min-width: 768px) {
-  .portfolio-item-individual__item {
-    max-width: 300px;
-    max-height: 300px;
-  }
-
   .portfolio-item-individual__img:hover {
-    transform: translateY(calc(-100% + 300px));
+    /* the .p-i-i__item max-height, subtract the margin-top of p-i-i__img*/
+    transform: translateY(calc(-100% + 360px));
   }
 }
